chore: fixed broken styles

--- a/src/App.scss
+++ b/src/App.scss
@@ -21,6 +21,7 @@ $narrow-desktop:  64rem; // 64rem
       // border: 2px solid red;
       height: 10vh;
       width: 100%;
+      margin-top: -7.5vh;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
